# peer

./: .gitignore  CLUSTER_IMPLEMENTATION_SUMMARY.md  LICENSE  MISSION_ACCOMPLIE.md  MISSION_COMPLETE.md  MISSION_FINALE_ACCOMPLIE.md  PROPOSITION_XTTS_V2.sh  RAPPORT_FINAL_MIGRATION_WHISPERX.md  RAPPORT_FINAL_MISSION_ACCOMPLIE.md  RAPPORT_FINAL_PRODUCTION.md  RAPPORT_FINAL_RECONNAISSANCE_VOCALE.md  RAPPORT_FINAL_VOIX_FRANCAISE_OPTIMISEE.md  README.md  TTS_SOLUTIONS_2025.md  VALIDATION_ARRET_POLI.py  VALIDATION_FINALE_REUSSIE.md  VALIDATION_FINALE_SUI_AGENT_IA.py  VOICE_SYSTEM_STATUS_REPORT.md  audio_diagnostic.py  benchmark_models.py  cluster_test.py  compare_voice_models.sh  compatibility_report.txt  debug_audio_capture.py  debug_audio_capture_simple.py  demo_final_complete.sh  demo_final_integration.py  demo_final_voix_francaise.sh  demo_modifications.sh  demo_production_ready.py  demo_simple.py  demo_voice_system.py  diagnose.sh  diagnostic_audio_advanced.py  enhanced_voice_peer.py  final_validation.py  final_validation_test.py  french_voice_config.yaml  install.sh  install_models.sh  (+75 more)
docs/fr/: README.md
docs/fr/architecture/: architecture_detaillee_phase6.md  architecture_evoluee_ajustee.md  architecture_globale.md  architecture_globale_peer.md  architecture_interface_sui.md  architecture_peer_assistant_plugins.md  audit_final_technologies_architecture.md  choix_architecture_validations_technologiques.md  justification_scripts_cli.md
docs/fr/conception/: implementation_adaptateurs_infrastructure_peer.md  implementation_analyse_continue_feedback_vocal.md  implementation_base_peer.md  implementation_couche_domaine_peer.md  implementation_interfaces_peer.md  implementation_plugins_peer_assistant.md  implementation_progressive_peer.md  principes_conception.md
docs/fr/plan/: plan_architecture_globale_peer.md  plan_continuite_phase5.md  plan_developpement_peer.md  plan_phase4.md  plan_phase5.md  plan_phase6.md  plan_phase7.md
docs/fr/specifications/: specifications_detaillees_interface_sui.md  specifications_evolution_phase7.md  specifications_interface_sui.md  specifications_phase7.md
src/: __init__.py
src/peer/: __init__.py
src/peer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/peer/core/: __init__.py  api.py  cluster.py  daemon.py  protocol.py
src/peer/domain/entities/: message_entities.py
src/peer/domain/ports/: stt_port.py  system_check_port.py  tts_port.py
src/peer/domain/services/: command_service.py  message_service.py  system_check_service.py
src/peer/infrastructure/adapters/: simple_system_check_adapter.py  simple_tts_adapter.py
src/peer/interfaces/api/: api.py
src/peer/interfaces/cli/: cli.py
src/peer/interfaces/sui/: README.md  __init__.py  main.py  nlp_engine.py  sui.py  sui_old.py  sui_refactored.py  voice_state_machine.py
src/peer/interfaces/sui/adapters/: interface_adapter.py
src/peer/interfaces/sui/domain/: models.py
src/peer/interfaces/sui/nlu/: __init__.py
src/peer/interfaces/sui/nlu/domain/: models.py  nlp_engine.py
src/peer/interfaces/sui/stt/: audio_io.py  continuous_speech_manager.py  speech_recognizer.py
src/peer/interfaces/sui/tts/: __init__.py  advanced_tts_engine.py  base.py  realistic_tts_engine.py  simple_tts_engine.py  text_to_speech.py
src/peer/interfaces/tui/: tui.py
