[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/jcnm/peer"
"Documentation" = "https://jcnm.github.io/peer"
"Repository" = "https://github.com/jcnm/peer"
"Issue Tracker" = "https://github.com/jcnm/peer/issues"

[project]
name = "peer"
version = "0.2.0"
keywords = ["cli", "tui", "api", "sui", "tts", "speech-recognition", "assistant", "omniscient"]
description = "Peer Assistant Omniscient avec interface vocale bidirectionnelle"
readme = "README.md"
authors = [
    {name = "JCNM", email = "jcnm@sylorion.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
requires-python = ">=3.8"
dependencies = [
    # Dépendances de base
    "click>=8.0.0",
    "rich>=10.0.0",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "websockets>=10.0",
    "structlog>=21.1.0",
    "PyYAML>=6.0",  # For configuration file loading

    # LLM et IA
    "ollama>=0.1.0",
    "transformers>=4.20.0",
    "spacy>=3.4.0",
    # "pytorch==2.7.0", # PyTorch is often a dependency of the ML libraries, let them manage it or install separately if specific version needed.
    
    # Analyse de code
    "tree-sitter>=0.20.0",
    "pygments>=2.10.0",
    "libcst>=0.4.0",
    
    # Interface vocale
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.11",
    "webrtcvad>=2.0.10",
    "numpy<2", # Keep numpy<2 for broad compatibility
    "scipy>=1.7.0",
    "soundfile>=0.12.1", # Added for various audio processing tasks, often a dep for TTS/STT libs

    # STT & TTS Libraries - Add new ones here
    "openai-whisper", # Base Whisper, can be replaced by whisperx if preferred
    "whisperx @ git+https://github.com/m-bain/whisperX.git", # For WhisperX
    "TTS>=0.22.0",        # For Coqui XTTS_v2 and other Coqui models
    "silero>=0.4.0,<0.5.0",  # For Silero STT/TTS (limited to available versions)
    "speechbrain>=0.5.14", # For SpeechBrain STT/TTS
    "vosk>=0.3.40,<0.3.45",  # For Vosk STT (limited to available versions)
    "bark>=0.2.0",        # For Bark TTS (Suno AI)
    # Kokoro TTS is not a direct pip install, usually involves cloning a repo and local setup.
    # It's not added here as a direct pip dependency.
    # If a PyPI package "kokoro-tts" exists and is the correct one, it can be added.
    # For now, assuming manual install or it's part of another library.
    
    # Utilitaires
    "tqdm>=4.62.0",
    "colorama>=0.4.4",
    "psutil>=5.8.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "mypy>=0.900",
    "flake8>=3.9.0",
]
speech = [
    "pyttsx3>=2.90",
    "pyaudio>=0.2.11", # Redundant if in base, but ok
    "SpeechRecognition>=3.10.0", # Redundant if in base, but ok
    "webrtcvad>=2.0.10", # Redundant if in base, but ok
    # "whisper>=1.0.0", # Covered by openai-whisper or whisperx
    # "piper-tts>=1.3.0", # Piper is compiled from source, not a pip package for the core binary
    # "vosk>=0.3.42", # Covered in base
    "soundfile>=0.12.1" # Good to have here too
]
ide = [
    "python-language-server>=0.36.2",
    "pygls>=0.11.3",
]


[project.scripts]
peer = "peer.interfaces.cli.cli:main"
peer-sui = "peer.interfaces.cli.cli_with_sui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
addopts = "--cov=peer --cov-report=term-missing"

